Some fixes for horizontal scrolling problems (the query builder will still cause horizontal scroll if the window isn't wide enough, however, as a result of it's layout)
git-svn-id: svn+ssh://svn.bestpractical.com/svn/bps-public/rt/branches/3.5-TESTING@5182 e417ac7c-1bcc-0310-8ffa-8f5827389a85

--- a/html/NoAuth/css/3.5-default/misc.css
+++ b/html/NoAuth/css/3.5-default/misc.css
@@ -82,3 +82,9 @@ ul.action-results {
     margin-top: 0;
     margin-bottom: 0;
 }
+
+#comp-Search-Build .titlebox-content {
+    padding-left: 0.7em;
+    padding-right: 0.3em;
+}
+
